--- a/style.css
+++ b/style.css
@@ -274,13 +274,14 @@ section {
 }
 
 .about-details-container {
-  justify-content: center;
   flex-direction: column;
+
 }
 
 .about-containers,
 .about-details-container {
   display: flex;
+  align-items: center;
 }
 
 .about-pic {
@@ -304,15 +305,16 @@ section {
 }
 
 .section-container {
+
   gap: 4rem;
   height: 80%;
 }
 
-.section__pic-container {
+/* .section__pic-container {
   height: 400px;
   width: 400px;
   margin: auto 0;
-}
+} */
 
 /* EXPERIENCE SECTION */
 
